# scraper-beautiful-soup

./: .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  Untitled.ipynb  main.py  pyproject.toml  query.txt  test.py
app/: settings.py
app/db_queries/: queries.py
app/helpers/: fake_header.py  get_failed_products_generator.py  postgres.py
app/helpers/database/: postgres.py
app/helpers/database/database_queries/: queries.py
app/helpers/rabbitmq/: publisher.py  receiver.py
app/helpers/utils/: regex_replacer.py  timestamp_from_file.py
app/marketplaces/: amazon.py
app/spiders/: amazon.py  amazon_item.py  amazon_scraper.py
app/utils/: soup.py
main/: test.py
tests/: test_any-file.py
