[tool.poetry]
name = "scraper-beautiful-soup"
version = "0.1.0"
description = ""
authors = ["guimassoqueto <gui.massoqueto@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app/**/*.py" },
    { include = "main.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
fake-useragent = "^1.1.3"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.4"
psycopg = "^3.1.9"
watchdog = "^3.0.0"
redis = "^4.6.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "^7.4.0"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest tests/*"